--- a/styles/main.css
+++ b/styles/main.css
@@ -13,11 +13,15 @@ body {
     background-size: cover;
 }
 
+div{
+    width:600px;
+    height:600px;
+}
+
 section {
     padding: 2%;
     margin: 2%;
     box-shadow: 3px 3px 10px 3px #888888;
-    box-shadow-blur:
     border-style:groove;
     border-width: 2px;
     border-color: orange;
