--- a/app/scss/00-helper/01-variables/_fonts.scss
+++ b/app/scss/00-helper/01-variables/_fonts.scss
@@ -8,13 +8,25 @@ $base-font-size: 14px;
 /* ---------------------------------------------------------------------
 Colors
 --------------------------------------------------------------------- */
-//dark teal
-$background-color: #00527a;
-//cyan blue
-$brand-blue: #0084d9;
+
+//light
+$dusty: #d7d0c6;
+
+//med
+$blue: #a9c2bf;
+$heather: #a3919f;
+
+//dark
+$wine: #4f1c3c;
 
 /* ---------------------------------------------------------------------
 Size
 --------------------------------------------------------------------- */
 
-$gutter-width: 4px;
+$gutter: 20px;
+
+$breakpoints: (
+  //min-width
+  small: 450px,
+  large: 1180px
+);
