--- a/app/scss/02-base/_headings.scss
+++ b/app/scss/02-base/_headings.scss
@@ -15,12 +15,7 @@ h2 {
 
 p {
     font-family: "PT Sans", sans-serif;
-    font-style: normal;
-    font-weight: 400;
-    font-size: 1em;
-    text-transform: none;
-    text-decoration: none;
-    line-height: 1.5;
+    clear: both;
 }
 
 a { 
