--- a/app/css/main.css
+++ b/app/css/main.css
@@ -163,7 +163,7 @@ Grid
 .l--constrain {
   position: relative;
   margin: 0 auto;
-  border: 1px solid blue; }
+  background-color: #d5d5d5; }
   @media (max-width: 1180px) {
     .l--constrain {
       width: 465px;
@@ -356,13 +356,14 @@ Grid
 /* ---------------------------------------------------------------------
 Navigation Bar
 --------------------------------------------------------------------- */
-body {
-  background: #D5D5D5; }
-
 .nav__primary {
   border-top: 1px solid;
   border-bottom: 1px solid;
   height: 38px;
   border-color: #c1bfbf #fefefe; }
+
+.hero {
+  height: 200px;
+  background: #4f1c3c; }
 
 /*05-states*/
