--- a/app/scss/00-helper/01-variables/_colors.scss
+++ b/app/scss/00-helper/01-variables/_colors.scss
@@ -1,7 +1,13 @@
 /* ---------------------------------------------------------------------
-Fonts
+Colors
 --------------------------------------------------------------------- */
 
-$base-font-family: "PT Sans", sans-serif;
-$base-heading-family: "Abril Fatface", cursive;
-$base-font-size: 14px;
+//light
+$dusty: #d7d0c6;
+
+//med
+$blue: #a9c2bf;
+$heather: #a3919f;
+
+//dark
+$wine: #4f1c3c;
