--- a/app/scss/03-layout/_l-mediaq--small.scss
+++ b/app/scss/03-layout/_l-mediaq--small.scss
@@ -1,7 +1,7 @@
 /* ---------------------------------------------------------------------
-Fonts
+Navigation Bar
 --------------------------------------------------------------------- */
 
-$base-font-family: "PT Sans", sans-serif;
-$base-heading-family: "Abril Fatface", cursive;
-$base-font-size: 14px;
+@-ms-viewport{
+  width: device-width;
+}
