--- a/app/scss/04-modules/_email-sections.scss
+++ b/app/scss/04-modules/_email-sections.scss
@@ -1,7 +1,8 @@
 /* ---------------------------------------------------------------------
-Fonts
+Email Sign-up
 --------------------------------------------------------------------- */
 
-$base-font-family: "PT Sans", sans-serif;
-$base-heading-family: "Abril Fatface", cursive;
-$base-font-size: 14px;
+#mc_embed_signup{
+    clear: left; 
+    font-family: "PT Sans", sans-serif;
+}
