--- a/app/scss/02-base/_headings.scss
+++ b/app/scss/02-base/_headings.scss
@@ -10,57 +10,23 @@ h1 {
 }
 
 h2 {
-    font-family: "PT Sans", sans-serif;
 }
 
 p {
-    font-family: "PT Sans", sans-serif;
-    clear: both;
+    
 }
 
 a { 
     text-decoration: none;
+    color: red;
 }
 
-/* xx */
-
-.singer-title{
-    font-size: 24px;
-}
-
-/* NavBar */
-.navbar-link {
-    text-align:right;
-    position: absolute;
-    right: 150px;
-    top: 25px;
-}
-
-.navbar-link li{
+.text {
+    min-height: 150px;
+    margin: 20px;
     float: left;
-    padding: 15px;
-    margin: 15px;
-    list-style-type: none;
 }
 
-/* Bio */
-.singer-bio {
-    background: #fff;
-    color: #001a33;
-}
-
-/* Calendar */
-.calendar {
-    
-    width: 600px;
-}
-
-/* Email Sign-up*/
-#mc_embed_signup{
-    clear: left; 
-    font-family: "PT Sans", sans-serif;
-}
-
-@-ms-viewport{
-  width: device-width;
+.band {
+    background-color: #d5d5d5;
 }
