--- a/app/css/main.css
+++ b/app/css/main.css
@@ -102,22 +102,29 @@ textarea {
  hList
 --------------------------------------------------------------------- */
 h1 {
-  font-family: "Abril Fatface", cursive;
+  font-family: "Abril Fatface", cursive, cursive;
   font-style: normal;
   font-weight: 400;
-  font-size: 1.25em; }
+  font-size: 2em; }
+
+h2 {
+  font-size: 1.375rem;
+  font-weight: 300; }
+
+h3 {
+  font-size: 1.125rem;
+  font-weight: 300; }
+
+p {
+  font-family: "PT Sans", sans-serif, sans-serif;
+  color: #36454F;
+  line-height: 1.5em;
+  font-weight: 200;
+  line-height: 1.8em; }
 
 a {
   text-decoration: none;
-  color: red; }
-
-.text {
-  min-height: 150px;
-  margin: 20px;
-  float: left; }
-
-.band {
-  background-color: #d5d5d5; }
+  color: #a3919f; }
 
 /* ---------------------------------------------------------------------
 Navigation
@@ -136,61 +143,96 @@ Grid
   margin: 0 auto; }
   @media (max-width: 768px) {
     .l--constrain {
-      background-color: yellow; } }
+      background-color: #f00; } }
 
 .grid {
-  display: inline-block; }
-  .grid::after, .grid::before {
-    display: table;
-    content: ""; }
+  margin: 0 0 20px 0;
+  position: relative; }
   .grid::after {
+    display: table;
+    content: "";
     clear: both; }
   .grid__1 {
-    width: 8.33333%; }
+    width: 8.33333%;
+    float: left;
+    box-sizing: border-box; }
   .grid__2 {
-    width: 16.66667%; }
+    width: 16.66667%;
+    float: left;
+    box-sizing: border-box; }
   .grid__3 {
-    width: 25%; }
+    width: 25%;
+    float: left;
+    box-sizing: border-box; }
   .grid__4 {
-    width: 33.33333%; }
+    width: 33.33333%;
+    float: left;
+    box-sizing: border-box; }
   .grid__5 {
-    width: 41.66667%; }
+    width: 41.66667%;
+    float: left;
+    box-sizing: border-box; }
   .grid__6 {
-    width: 50%; }
+    width: 50%;
+    float: left;
+    box-sizing: border-box; }
   .grid__7 {
-    width: 58.33333%; }
+    width: 58.33333%;
+    float: left;
+    box-sizing: border-box; }
   .grid__8 {
-    width: 66.66667%; }
+    width: 66.66667%;
+    float: left;
+    box-sizing: border-box; }
   .grid__9 {
-    width: 75%; }
+    width: 75%;
+    float: left;
+    box-sizing: border-box; }
   .grid__10 {
-    width: 83.33333%; }
+    width: 83.33333%;
+    float: left;
+    box-sizing: border-box; }
   .grid__11 {
-    width: 91.66667%; }
+    width: 91.66667%;
+    float: left;
+    box-sizing: border-box; }
   .grid__12 {
-    width: 100%; }
+    width: 100%;
+    float: left;
+    box-sizing: border-box; }
   .grid__offset-1 {
-    margin-left: 8.33333%; }
+    margin-left: 8.33333%;
+    background-color: #ff0; }
   .grid__offset-2 {
-    margin-left: 16.66667%; }
+    margin-left: 16.66667%;
+    background-color: #ff0; }
   .grid__offset-3 {
-    margin-left: 25%; }
+    margin-left: 25%;
+    background-color: #ff0; }
   .grid__offset-4 {
-    margin-left: 33.33333%; }
+    margin-left: 33.33333%;
+    background-color: #ff0; }
   .grid__offset-5 {
-    margin-left: 41.66667%; }
+    margin-left: 41.66667%;
+    background-color: #ff0; }
   .grid__offset-6 {
-    margin-left: 50%; }
+    margin-left: 50%;
+    background-color: #ff0; }
   .grid__offset-7 {
-    margin-left: 58.33333%; }
+    margin-left: 58.33333%;
+    background-color: #ff0; }
   .grid__offset-8 {
-    margin-left: 66.66667%; }
+    margin-left: 66.66667%;
+    background-color: #ff0; }
   .grid__offset-9 {
-    margin-left: 75%; }
+    margin-left: 75%;
+    background-color: #ff0; }
   .grid__offset-10 {
-    margin-left: 83.33333%; }
+    margin-left: 83.33333%;
+    background-color: #ff0; }
   .grid__offset-11 {
-    margin-left: 91.66667%; }
+    margin-left: 91.66667%;
+    background-color: #ff0; }
   @media (min-width: 320px small) {
     .grid__1--small {
       width: 8.33333%; }
@@ -252,24 +294,49 @@ Navigation Bar
 /* ---------------------------------------------------------------------
 Sections
 --------------------------------------------------------------------- */
+html,
+body {
+  position: relative;
+  height: 100%;
+  width: 100%;
+  margin: 0;
+  padding: 0;
+  left: 0;
+  top: 0;
+  font-size: 100%;
+  font-family: "PT Sans", sans-serif, sans-serif;
+  color: #36454F;
+  line-height: 1.5; }
+
 nav {
   padding: 20px; }
 
-body {
-  font-family: "PT Sans", sans-serif;
-  color: #4f1c3c; }
+.footer {
+  position: absolute;
+  height: 35px;
+  padding: 5px 25px;
+  width: 100%;
+  bottom: 0px;
+  left: 0px;
+  margin-top: 20px;
+  background-color: #4f1c3c; }
 
-footer {
-  padding: 20px;
-  background: #4f1c3c;
-  margin-top: 20px; }
+.wrapper {
+  padding: 0 80px; }
 
 .hero {
   height: 350px;
   background: #4f1c3c; }
 
-.wrapper {
-  padding: 0 80px; }
+.text {
+  min-height: 150px;
+  margin: 20px;
+  float: left;
+  background-color: #f00;
+  align: top; }
+
+.band {
+  background-color: #d7d0c6; }
 
 /* ---------------------------------------------------------------------
 Email Sign-up
