--- a/app/scss/03-layout/_l-grid.scss
+++ b/app/scss/03-layout/_l-grid.scss
@@ -1,25 +1,23 @@
 /* ---------------------------------------------------------------------
 Grid
 --------------------------------------------------------------------- */
+
 .l--constrain {
   margin: 0 auto;
   
   @media (max-width: map-get($breakpoints, large)) {
-    background-color: yellow;
+    background-color: #f00;
   }
 }
 
 .grid {
-  display: inline-block;
+  margin: 0 0 $gutter 0;
+  position: relative;
 
   //clearfix
-  &::after,
-  &::before {
+  &::after {
     display: table;
     content: "";
-  }
-  
-  &::after {
     clear: both;
   }
 
@@ -27,16 +25,19 @@ Grid
   @for $number from 1 through 12 {
     &__#{$number} {
       width: percentage($number/12);
+      float: left;
+      box-sizing: border-box;
     }
   }
-  
+
   //offset
   @for $number from 1 through 11 {
     &__offset-#{$number} {
       margin-left: percentage($number/12);
+      background-color: #ff0;
     }
   }
-  
+
   //media queries
   @each $name, $size in $breakpoints {
     @media (min-width: $size$name) {
