--- a/app/scss/03-layout/_l-grid.scss
+++ b/app/scss/03-layout/_l-grid.scss
@@ -2,17 +2,9 @@
 Grid
 --------------------------------------------------------------------- */
 
-.l--constrain {
-  margin: 0 auto;
-  
-  @media (max-width: map-get($breakpoints, large)) {
-    background-color: #f00;
-  }
-}
-
 .grid {
-  margin: 0 0 $gutter 0;
-  position: relative;
+  box-sizing: border-box;
+  border: 1px solid red;
 
   //clearfix
   &::after {
@@ -22,28 +14,24 @@ Grid
   }
 
   //columns
-  @for $number from 1 through 12 {
+  //grid__#
+ @for $number from 1 through 12 {
     &__#{$number} {
       width: percentage($number/12);
       float: left;
-      box-sizing: border-box;
-    }
-  }
-
-  //offset
-  @for $number from 1 through 11 {
-    &__offset-#{$number} {
-      margin-left: percentage($number/12);
-      background-color: #ff0;
+      padding: $gutter;
     }
   }
 
   //media queries
+  //"grid__12--size"
   @each $name, $size in $breakpoints {
     @media (min-width: $size$name) {
       @for $number from 1 through 12 {
         &__#{$number}--#{$name} {
           width: percentage($number/12);
+          float: left;
+          padding: $gutter;
         }
       }
     }
