--- a/app/css/main.css
+++ b/app/css/main.css
@@ -139,8 +139,7 @@ Navigation
 Grid
 --------------------------------------------------------------------- */
 .grid {
-  box-sizing: border-box;
-  border: 1px solid red; }
+  box-sizing: border-box; }
   .grid::after {
     display: table;
     content: "";
@@ -313,8 +312,7 @@ nav {
   padding: 20px; }
 
 section {
-  padding-bottom: 80px;
-  background-color: yellow; }
+  padding-bottom: 80px; }
 
 .hero {
   height: 350px;
